--- a/style.css
+++ b/style.css
@@ -21,13 +21,32 @@
     /* Bright green */
 }
 
+html {
+    background-color: #ffffff;
+}
+
 body {
     box-sizing: border-box;
-    padding: 2em;
-    padding-top:0px;
+    padding: 0em;
+    padding-top: 0px;
     background-size: cover;
     background-position: top center;
     background-attachment: fixed;
+    background-color: #ffffff;
+}
+
+.container {
+    padding: 1em;
+}
+
+@media (orientation: landscape) {
+    body {
+        padding: 2em;
+    }
+
+    .container {
+        padding: 0em;
+    }
 }
 
 h1,
@@ -52,13 +71,13 @@ h2 {
     margin-bottom: 1em;
 }
 
-.toolbar button.selected{
+.toolbar button.selected {
     background-color: #333;
-    color:#ccc;
+    color: #ccc;
 }
 
 .evenement {
-    position:relative;
+    position: relative;
     border: 1px solid #f0f0f0;
     border-radius: 3px;
     padding: 10px;
@@ -69,6 +88,7 @@ h2 {
 .evenement h2 {
     margin-bottom: 10px;
     margin-top: 0;
+    padding: 0;
 }
 
 .evenement h2 .pastille {
@@ -78,21 +98,34 @@ h2 {
 
     margin-right: 10px;
     border-radius: .5em;
-    float: left;
-
+    position: absolute;
+    display: none;
 }
 
 .evenement time {
     font-style: italic;
     color: #888;
     margin-bottom: 5px;
-    float: right;
-    margin-right : 30px;
-    margin-top:10px;
+
+    margin-right: 30px;
+    margin-top: 0px;
+}
+
+@media (orientation: landscape) {
+    .evenement time {
+        float: right;
+    }
 }
 
 .evenement div {
     line-height: 1.5;
+}
+
+.evenement .description {
+    width: 100%;
+    white-space: pre-wrap;
+    max-width: 100%;
+    hyphens: auto;
 }
 
 /** Galerie d'image **/
@@ -146,17 +179,17 @@ h2 {
 
 .close-btn {
     position: absolute;
-    top: 10px;
+    top: 0px;
     right: 10px;
     font-size: 24px;
     color: #000;
     cursor: pointer;
     z-index: 10000;
-    font-weight:bold;
+    font-weight: bold;
 }
 
-#galleryOverlay .close-btn{
-    color:#fff;
+#galleryOverlay .close-btn {
+    color: #fff;
 }
 
 .close-btn:hover {
@@ -206,6 +239,7 @@ label {
 input[type="date"],
 input[type="time"],
 input[type="text"],
+input[type="password"],
 textarea {
     box-sizing: border-box;
     width: 100%;
@@ -213,12 +247,14 @@ textarea {
     border: 1px solid #ccc;
     border-radius: 5px;
     transition: border-color 0.3s ease;
+    margin-bottom:2px;
 }
 
 /* Style des champs en focus */
 input[type="date"]:focus,
 input[type="time"]:focus,
 input[type="text"]:focus,
+input[type="password"]:focus,
 textarea:focus {
     border-color: #3498db;
 }
@@ -227,6 +263,7 @@ textarea:focus {
 input[type="date"].error,
 input[type="time"].error,
 input[type="text"].error,
+input[type="password"].error,
 textarea.error {
     border-color: #e74c3c;
 }
@@ -238,7 +275,7 @@ textarea.error {
 }
 
 /* Style du bouton de soumission */
-button[type="submit"] {
+button[type="submit"],input[type="submit"] {
     display: block;
     width: 100%;
     padding: 10px;
@@ -305,9 +342,10 @@ button:hover,
 
 
 /* Image preview */
-.images img{
+.images img {
     margin-right: 10px;
 }
+
 .preview-image {
     width: 100%;
     height: 100%;
@@ -325,7 +363,7 @@ button:hover,
     height: 64px;
 }
 
-.remove-image{
+.remove-image {
     position: absolute;
     top: 2px;
     right: 2px;
@@ -418,18 +456,18 @@ button:hover,
     text-align: center;
 }
 
-#calendar h2 button{
-    border:none;
-    padding:3px;
-    padding-left:6px;
-    padding-right:6px;
+#calendar h2 button {
+    border: none;
+    padding: 3px;
+    padding-left: 6px;
+    padding-right: 6px;
     background-color: var(--accent-color);
     font-weight: bold;
 }
 
-#calendar .month-label{
+#calendar .month-label {
     width: 300px;
-    display:inline-block;
+    display: inline-block;
 }
 
 
@@ -461,8 +499,8 @@ button:hover,
 
 #calendar .day {
     width: calc(100% / 7);
-    padding: 5px;
-    padding-top:0;
+    padding: 1px;
+    padding-top: 0;
     text-align: center;
     border: 1px solid #ccc;
     display: inline-block;
@@ -473,13 +511,19 @@ button:hover,
 
 
 #calendar .day.header {
-    border: none;
+    border: 1px solid #fff;
     background-color: var(--accent-color);
     text-transform: uppercase;
     height: auto;
-    padding:5px;
+    padding: 5px;
+    font-size:.6em;
 }
 
+@media (orientation: landscape) {
+    #calendar .day.header {
+        font-size:1em;
+    }
+}
 
 #calendar .day.blank {
     border: none;
@@ -491,15 +535,19 @@ button:hover,
     background-color: #f9f9f9;
 }
 
-#calendar .day.today {
+#calendar .day.today .dayNumber {
     font-weight: bold;
-    border: 4px dashed var(--primary-color);
+    background-color: var(--primary-color);
+    border-radius: 10px;
+    color:#fff;
 }
-#calendar .day .dayNumber{
-    position:sticky;
-    top:0;
-    z-index:2;
+
+#calendar .day .dayNumber {
+    position: sticky;
+    top: 0;
+    z-index: 2;
     background-color: #fff;
+    margin-bottom: 2px;
 }
 
 #calendar .day .event {
@@ -507,11 +555,22 @@ button:hover,
     text-align: left;
     margin-left: 0;
     margin-bottom: 2px;
-    padding: 1px;
-    font-size: .8em;
+    padding: 2px;
+    font-size: .65em;
     color: #fff;
     border-radius: 2px;
-    cursor:pointer;
+    cursor: pointer;
+    font-weight: 400;
+}
+
+@media (orientation: landscape) {
+    #calendar .day .event {
+        font-size: .8em;
+    }
+
+    #calendar .day {
+        padding: 5px;
+    }
 }
 
 #calendar .day .event .point {
@@ -529,11 +588,11 @@ button:hover,
     background-color: #fff;
 }
 
-#eventOverlay .evenement{
-    width:95%;
+#eventOverlay .evenement {
+    width: 95%;
 }
 
-.icons-container button{
-    margin-right:5px;
+.icons-container button {
+    margin-right: 5px;
     padding: 3px 6px;
 }
